Fix scroll on iOS devices

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ h3 {
     width: 100%;
     height: 100%;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 .content {
     max-width: 42em;
